<resources>
    <string name="app_name">Calculator</string>
    <string name="clear">AC</string>
    <string name="_7">7</string>
    <string name="_4">4</string>
    <string name="_1">1</string>
    <string name="_0">0</string>
    <string name="backspace">backspace</string>
    <string name="_8">8</string>
    <string name="_5">5</string>
    <string name="_2">2</string>
    <string name="_9">9</string>
    <string name="_6">6</string>
    <string name="_3">3</string>
    <string name="dot">.</string>
    <string name="division">division</string>
    <string name="multiplication">multiplication</string>
    <string name="minus">minus</string>
    <string name="add">add</string>
    <string name="equal">equal</string>
    <string name="open_parenthesis">(</string>
    <string name="close_parenthesis">)</string>
    <string name="division_symbol">÷</string>
    <string name="multiplication_symbol">×</string>
    <string name="minus_symbol">-</string>
    <string name="add_symbol">+</string>
    <string name="equal_symbol">=</string>
</resources>